--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,48 @@ header > * {
 header h1 {
     font-size: 2em;
 }
+
+form {
+    background-color: var(--section-background-color);
+    border: var(--border-style);
+    border-radius: 3px;
+
+    width: 30%;
+    padding: 50px;
+}
+
+.form-row {
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.form-row input[type='text'],
+.form-row input[type='number'] {
+    background-color: white;
+    border: var(--border-style);
+    border-radius: 3px;
+    width: 100%;
+    padding: 7px;
+    font-size: 1rem - 2px;
+}
+
+.form-row label {
+    margin-bottom: 1rem;
+}
+
+form fieldset {
+    border: none;
+}
+
+form fieldset legend {
+    margin-bottom: 15px;
+}
+
+form fieldset .radio-label {
+    font-size: 1rem - 2px;
+    padding: 0 20px 0 10px;
+    
+}
