--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,8 @@ form {
 
     width: 30%;
     padding: 50px;
+
+    display: none;
 }
 
 .form-row {
@@ -74,6 +76,7 @@ form {
 
 form fieldset {
     border: none;
+    margin-bottom: 2rem;
 }
 
 form fieldset legend {
@@ -83,5 +86,58 @@ form fieldset legend {
 form fieldset .radio-label {
     font-size: 1rem - 2px;
     padding: 0 20px 0 10px;
-    
 }
+
+.form-row button, .btnDisplayForm {
+    font-size: 1rem;
+    font-weight: bold;
+  
+    color: #FFFFFF;
+    background-color: #5995DA;
+  
+    border: none;
+    border-radius: 3px;
+  
+    padding: 10px 40px;
+    cursor: pointer;
+}
+
+.form-row button:hover {
+    background-color: #76AEED;
+  }
+  
+.form-row button:active {
+    background-color: #407FC7;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+
+    width: 80%;
+}
+
+.grid-container .item {
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center;
+    gap: 2rem;   
+
+    background-color: var(--section-background-color);
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+img {
+    width: 60px;
+    height: 60px;
+}
+
+.item p {
+    line-height: 2rem;
+}
+
+
