--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ form fieldset .radio-label {
     padding: 0 20px 0 10px;
 }
 
-.form-row button, .btnDisplayForm {
+.form-row button, 
+.btnDisplayForm {
     font-size: 1rem;
     font-weight: bold;
   
@@ -102,11 +103,13 @@ form fieldset .radio-label {
     cursor: pointer;
 }
 
-.form-row button:hover {
+.form-row button:hover, 
+.btnDisplayForm:hover {
     background-color: #76AEED;
 }
   
-.form-row button:active {
+.form-row button:active,
+.btnDisplayForm:active  {
     background-color: #407FC7;
 }
 
