--- a/styles.css
+++ b/styles.css
@@ -46,10 +46,8 @@ form {
     border: var(--border-style);
     border-radius: 3px;
 
-    width: 30%;
-    padding: 50px;
-
-    display: none;
+    width: 80%;
+    padding: 30px 50px 20px;
 }
 
 .form-row {
@@ -167,4 +165,23 @@ img {
     border-radius: 5px;
 }
 
+.dialog {
+    width: 80%;
+    max-width: 500px;
+    padding: 1.5rem;
+    background-color: var(--section-background-color);
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    font-family: var(--font-family);
+    color: #333;
 
+    margin: 0 auto;
+    justify-items: center;
+}
+
+.close-dialog-btn {
+    width: 40px;
+    height: 40px;
+
+    cursor: pointer;
+}
