--- a/styles.css
+++ b/styles.css
@@ -122,10 +122,12 @@ form fieldset .radio-label {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: auto;git add 
     gap: 10px;
 
     width: 80%;
+    max-height: 60vh;
+    overflow-y: auto;
 }
 
 .grid-container .item {
