--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ form fieldset .radio-label {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-template-rows: auto;git add 
+    grid-template-rows: auto;
     gap: 10px;
 
     width: 80%;
